# opengl-template-cmake

./: CMakeLists.txt  README.md  build_all  build_and_run.bash  run.bash
cmake_modules/: FindGLM.cmake
data/shaders/: simple.vert
inc/: app.h  shader.h  shader_program.h  shader_program_builder.h  vertex.h  window.h
src/: app.cpp  main.cpp  shader.cpp  shader_program.cpp  shader_program_builder.cpp  window.cpp
test/: CMakeLists.txt  test_sample.cpp
